--- a/WhiteCrow.csproj
+++ b/WhiteCrow.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
     <PackageReference Include="OpenAI" Version="2.1.0" />
+    <PackageReference Include="ThrottlingTroll.AzureFunctionsAspNet" Version="7.3.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
