--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -61,7 +61,7 @@
 			"options": {
 				"cwd": "${workspaceFolder}/bin/Debug/net8.0"
 			},
-			"command": "host start",
+			"command": "host start --port 7294",
 			"isBackground": true,
 			"problemMatcher": "$func-dotnet-watch"
 		}
